src/objects/loan__Loan_Product__c.object
<CustomObject>
    <fields>
        <fullName>loan__Parent_Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Application_Mode__c</fullName>
        <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills.</description>
        <inlineHelpText>Select Future Dues if the loan payments must be used to satisfy future dues. 
 Select Current Dues if the loan payments must be used to to satisfy present dues.</inlineHelpText>
        <label>Payment Application Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Future Dues</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current Dues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Bill_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of days for the bill to be generated before the due date.</inlineHelpText>
        <label>Pre Bill Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Product_Excess_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Excess general ledger account for the lending product</inlineHelpText>
        <label>Product Excess Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Lending Products (Product Excess Account)</relationshipLabel>
        <relationshipName>Loan_Products6Vhf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_GL_Code_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product GL Code - Interest</description>
        <inlineHelpText>Product GL Code - Interest</inlineHelpText>
        <label>Product GL Code - Interest</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_GL_Code_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product GL Code - Principal</description>
        <inlineHelpText>Product GL Code - Principal</inlineHelpText>
        <label>Product GL Code - Principal</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Int_On_Overdue_Income_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Int on Overdue Income Acc</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>30000 - INCOME</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Lending Products (Product Int on Overdue Income Acc)</relationshipLabel>
        <relationshipName>Loan_Products11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Interest_Amortization_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Interest Amortization Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Interest_Income_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the interest income general ledger account for the loan product.</inlineHelpText>
        <label>Product Interest Income Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>30000 - INCOME</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Lending Products (Product Interest Income Account)</relationshipLabel>
        <relationshipName>Loan_Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Loan_Control_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the loan control general ledger account for the loan product.</inlineHelpText>
        <label>Product Loan Control Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Loan_Loss_Provision_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the loan loss provision general ledger account for the loan product.</inlineHelpText>
        <label>Product Loan Loss Provision Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>40000 - EXPENDITURE</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Lending Products (Product Loan Loss Provision Account)</relationshipLabel>
        <relationshipName>Loan_Products6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Loan_Loss_Reserve_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the loan loss reverse general ledger account for the loan product.</inlineHelpText>
        <label>Product Loan Loss Reserve Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>20000 - LIABILITIES</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Lending Products (Product Loan Loss Reserve Account)</relationshipLabel>
        <relationshipName>Loan_Products8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Overdue_Interest_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Overdue Interest Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Suspended_Int_On_Overdue_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Suspended Int On Overdue Acc</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Suspended_Interest_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Suspended Interest Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Write_Off_Recovery_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the write-off recovery general ledger account for the loan product.</inlineHelpText>
        <label>Product Write-Off Recovery Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Loan_Products7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Recalculate_Interest_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will be applicable to AMZ based loans, where we need to recalculate the interest for the loan actions instead of using the interest rate on contract.</inlineHelpText>
        <label>Recalculate Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Refund_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Refund Allowed.</description>
        <label>Refund Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Refund_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Refund tolerance, applicable for Loc and Loans</description>
        <label>Refund Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Billing_Method__c</fullName>
        <description>Repayment Billing Method to Line of Credit</description>
        <inlineHelpText>This is effective once the Draw period is completed</inlineHelpText>
        <label>Repayment Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Remaining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Plus Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Period_Interest_Calculation__c</fullName>
        <label>Repayment Period Interest Calculation</label>
        <picklist>
            <controllingField>loan__Repayment_Billing_Method__c</controllingField>
            <picklistValues>
                <fullName>Simple Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compounding Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Procedure__c</fullName>
        <inlineHelpText>This  field contains the procedure which will be followed to create the installment schedule. The two types of procedures are:
 EMI (Equated Monthly Installments) and Flexible.</inlineHelpText>
        <label>Repayment Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Start_Basis__c</fullName>
        <inlineHelpText>For a funding in tranches loan, the regular repayment will start depending upon the value of this field.</inlineHelpText>
        <label>Repayment Start Basis</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Full Disbursal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draw Period End</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Term_Payment_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Repayment Term Payment Percentage, for Line of credit</description>
        <inlineHelpText>This is used to generate the bill after the Draw period</inlineHelpText>
        <label>Repayment Term Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Product</label>
        <referenceTo>loan__Savings_Product__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Time_Counting_Method__c</fullName>
        <inlineHelpText>1) Month and Days will use 360 days in a year for the Interest calculation.
2) Actual Days will use 365 days in a year for the Interest calculation.</inlineHelpText>
        <label>Time Counting Method</label>
        <picklist>
            <picklistValues>
                <fullName>Actual Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Month and Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Write_off_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Write off tolerance amount determines the maximum amount that the system can write off</inlineHelpText>
        <label>Write off Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Interest_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Income</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Loan_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Interest_Receivable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest Receivable</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Loan_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Principal_Receivable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Principal Receivable</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lending Product</label>
    <nameField>
        <label>Loan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lending Products</pluralLabel>
    <recordTypes>
        <fullName>loan__Amz_Based_Loan_Product_Record_Type</fullName>
        <active>true</active>
        <description>Amortization Based Payment Processing</description>
        <label>Amz Based Loan Product Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Line_Of_Credit_Product_Record_Type</fullName>
        <active>true</active>
        <description>Line Of Credit Product Record Type</description>
        <label>Line Of Credit Product Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Loan_Product_Record_Type</fullName>
        <active>true</active>
        <description>Actual Interest Based Payment Processing</description>
        <label>Loan Product Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Merchant_Cash_Advance</fullName>
        <active>true</active>
        <description>Merchant Cash Advance</description>
        <label>Merchant Cash Advance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_Accounting_Type</fullName>
        <active>true</active>
        <errorConditionFormula>(loan__Accrual_Based_Accounting__c &amp;&amp;  loan__Cash_Based_Accounting__c)
||
(NOT(loan__Accrual_Based_Accounting__c) &amp;&amp;  NOT(loan__Cash_Based_Accounting__c))</errorConditionFormula>
        <errorMessage>Both accrual and cash based accounting cannot be checked or unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Default_Term</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Default_Number_of_Installments__c &lt; loan__Min_Number_of_Installments__c, loan__Default_Number_of_Installments__c &gt; loan__Max_Number_of_Installments__c)</errorConditionFormula>
        <errorMessage>Default Term is Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Financed_Amount_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Min_Loan_Amount__c &lt; 0, loan__Max_Loan_Amount__c &lt; 0)</errorConditionFormula>
        <errorMessage>Invalid Minimum and Maximum Financed Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Interest_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Min_Interest_Rate__c  &lt; 0, loan__Max_Interest_Rate__c &lt; 0, loan__Max_Interest_Rate__c &lt; loan__Default_Interest_Rate__c, loan__Min_Interest_Rate__c &gt; loan__Default_Interest_Rate__c )</errorConditionFormula>
        <errorMessage>Invalid Interest Rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_LOC_Product_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (RecordType.DeveloperName == &apos;Line_Of_Credit_Product_Record_Type&apos;) &amp;&amp; (  NOT(ISPICKVAL(loan__Loan_Product_Type__c, &apos;Line of Credit&apos;))  ) , true, false)</errorConditionFormula>
        <errorMessage>Product type should be &apos;Line of Credit&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Loan_Cycle_Setup_For_Amount</fullName>
        <active>false</active>
        <description>Deprecated by Abhinav and Snehal, not supported.</description>
        <errorConditionFormula>AND(  ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;) ,OR( ISBLANK( loan__Max_Loan_Amount__c ) , ISBLANK( loan__Min_Loan_Amount__c ) ) )</errorConditionFormula>
        <errorMessage>Please fill out the Loan section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Loan_Cycle_Setup_For_Installment</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;) ,OR( ISBLANK(  loan__Minimum_Gap_Between_Installments__c ) , ISBLANK(  loan__Maximum_Gap_Between_Installments__c ), ISBLANK(  loan__Max_Number_of_Installments__c ) , ISBLANK(  loan__Min_Number_of_Installments__c ) , ISBLANK(  loan__Minimum_Installment_Amount__c ),  ISBLANK( loan__Default_Number_of_Installments__c )   ) )</errorConditionFormula>
        <errorMessage>Please fill out the Installment section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Loan_Cycle_Setup_For_Interest</fullName>
        <active>false</active>
        <description>Deprecated by Abhinav and Snehal, not supported.</description>
        <errorConditionFormula>AND(  ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;) ,OR( ISBLANK( loan__Max_Interest_Rate__c ) , ISBLANK( loan__Min_Interest_Rate__c ),ISBLANK( loan__Default_Interest_Rate__c )  ) )</errorConditionFormula>
        <errorMessage>Please fill out the Interest section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Loan_Product_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (RecordType.DeveloperName == &apos;Loan_Product_Record_Type&apos;) &amp;&amp; (  NOT(ISPICKVAL(loan__Loan_Product_Type__c, &apos;Loan&apos;))  ) , true, false)</errorConditionFormula>
        <errorMessage>Product type should be &apos;Loan&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Product_Name</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name) || ISNULL(Name)</errorConditionFormula>
        <errorMessage>Loan Product name cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Product_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(loan__Loan_Product_Type__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Product Type Cannot be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Term_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>OR( loan__Min_Number_of_Installments__c &lt; 0 , loan__Max_Number_of_Installments__c &lt; 0, loan__Default_Number_of_Installments__c &lt; 0)</errorConditionFormula>
        <errorMessage>Term cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Unique_Loan_Product</fullName>
        <active>true</active>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.loan__Loan_Product__c.Fields.Name , $ObjectType.loan__Loan_Product__c.Fields.Name , Name ) 
&amp;&amp; 
Id &lt;&gt; VLOOKUP( $ObjectType.loan__Loan_Product__c.Fields.Id , $ObjectType.loan__Loan_Product__c.Fields.Name , Name )</errorConditionFormula>
        <errorMessage>Loan Product Name already exists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Count_Loan_Approval_Prereqs</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Number_Of_Prereqs__c &gt; 1</errorConditionFormula>
        <errorMessage>You can only associate one Loan Approval Prerequisite with a Loan Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Floating_Interest_Rate_Index_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Interest_Rate_Type__c,&quot;Floating&quot;),
     ISBLANK(loan__Floating_Rate_Index__c))</errorConditionFormula>
        <errorDisplayField>loan__Floating_Rate_Index__c</errorDisplayField>
        <errorMessage>Floating Rate Index cannot be null for a Lending Product with Interest Type &apos;Floating&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Floating_Rate_Change_Action_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Interest_Rate_Type__c,&apos;Floating&apos;),
    ISBLANK(TEXT(loan__Floating_Rate_Change_Action__c)))</errorConditionFormula>
        <errorDisplayField>loan__Floating_Rate_Change_Action__c</errorDisplayField>
        <errorMessage>Floating Rate Change Action cannot be null for a Lending Product with Interest Type &apos;Floating&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Funding_in_Tranches_in_Line_of_Credit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Product_Type__c, &apos;Line of Credit&apos;), loan__Funding_in_Tranches__c)</errorConditionFormula>
        <errorMessage>Funding in Tranches cannot be checked for &apos;Line of Credit&apos; Product Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Only_Period_Value_Check</fullName>
        <active>true</active>
        <description>Interest only period shouldn&apos;t be negative</description>
        <errorConditionFormula>loan__Interest_Only_Period__c  &lt; 0</errorConditionFormula>
        <errorMessage>&apos;Interest Only Period&apos; can&apos;t be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Only_Product_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( loan__Interest_Calculation_Method__c , &apos;Interest Only&apos;), 
ISBLANK(loan__Interest_Only_Period__c) 
)</errorConditionFormula>
        <errorMessage>&apos;Interest Only Period&apos; must be provided for an &apos;Interest Only&apos; product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Rate_Boundary_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),(loan__Default_Interest_Rate__c &gt; loan__Max_Interest_Rate__c
||
loan__Default_Interest_Rate__c &lt; loan__Min_Interest_Rate__c))</errorConditionFormula>
        <errorMessage>The Default Interest Rate should fall between the specified Limits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Negative_Delinquency_Grace_Days_Check</fullName>
        <active>true</active>
        <description>&quot;Delinquency Grace Days&quot; cannot be negative</description>
        <errorConditionFormula>loan__Delinquency_Grace_Days__c &lt; 0</errorConditionFormula>
        <errorDisplayField>loan__Delinquency_Grace_Days__c</errorDisplayField>
        <errorMessage>&apos;Delinquency Grace Days&apos; cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Negative_Late_Charge_Grace_Days_Check</fullName>
        <active>true</active>
        <description>&quot;Late Charge Grace Days&quot; cannot be negative</description>
        <errorConditionFormula>loan__Late_Charge_Grace_Days__c &lt; 0</errorConditionFormula>
        <errorDisplayField>loan__Late_Charge_Grace_Days__c</errorDisplayField>
        <errorMessage>&apos;Late Charge Grace Days&apos; cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Negative_Write_off_Tolerance_Amount_Chek</fullName>
        <active>true</active>
        <description>&apos;Write off Tolerance Amount&apos; cannot be negative</description>
        <errorConditionFormula>loan__Write_off_Tolerance_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>loan__Write_off_Tolerance_Amount__c</errorDisplayField>
        <errorMessage>&apos;Write off Tolerance Amount&apos; cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__No_of_Installments_Boundary_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),( loan__Default_Number_of_Installments__c &gt; loan__Max_Number_of_Installments__c 
|| 
loan__Default_Number_of_Installments__c &lt; loan__Min_Number_of_Installments__c ))</errorConditionFormula>
        <errorDisplayField>loan__Default_Number_of_Installments__c</errorDisplayField>
        <errorMessage>The default No. of Installments should fall between the specified Limits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Overdue_Interest_Rate_Boundary_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),(loan__Default_Overdue_Interest_Rate__c &gt; loan__Max_Overdue_Interest_Rate__c
||
loan__Default_Overdue_Interest_Rate__c &lt; loan__Min_Overdue_Interest_Rate__c))</errorConditionFormula>
        <errorMessage>The Default Overdue Interest Rate should fall between the specified Limits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Pre_Bill_Days_Value_Check</fullName>
        <active>true</active>
        <description>Pre Bill Days shouldn&apos;t be negative</description>
        <errorConditionFormula>loan__Pre_Bill_Days__c &lt;0</errorConditionFormula>
        <errorMessage>&apos;Pre Bill Days&apos; can&apos;t be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Savings_Deposit_type_must_be_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(loan__Savings_Product__r.loan__Type_of_Deposits__c, &quot;Voluntary&quot;)</errorConditionFormula>
        <errorMessage>Savings Must be Mandatory. Check linked Savings Product definition.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Savings_Product_must_be_active</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( loan__Savings_Product__r.loan__Status__c , &quot;Active&quot;)</errorConditionFormula>
        <errorMessage>Savings Product must be active. Please check its status.</errorMessage>
    </validationRules>
</CustomObject>